<resources>
    <string name="app_name">Emlak Alım/Satım</string>
    <string name="str_userEntry">KULLANICI GİRİŞ</string>
    <string name="str_username">Kullanıcı Adı ya da Email</string>
    <string name="str_password">Şifre</string>
    <string name="str_signIn">Giriş Yap</string>
    <string name="str_signUp">Kayıt Ol</string>
    <string name="str_pleaseWait">Islem Yapılırken Bekleyiniz</string>
    <string name="str_loading">Islem Yapılırken Bekleyiniz</string>
    <string name="satilik">SATILIK</string>
    <string name="kiralik">KİRALIK</string>
    <string name="ilan_tipi">İlan Tipi</string>
    <string name="kiral_k">kiralık</string>
    <string name="sat_l_k">satılık</string>
    <string name="ilan_kategorisi">İlan Kategorisi</string>
    <string name="konut">konut</string>
    <string name="isyeri">işyeri</string>
    <string name="bina">bina</string>
    <string name="arsa">arsa</string>
    <string name="title_activity_homepage">Homepage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_homepage_category">HomepageCategory</string>
    <string name="title_activity_homepage_subcategory">HomepageSubcategory</string>
    <string name="title_activity_homepage_house_category">HomepageHouseCategory</string>
    <string name="daire">Daire</string>
    <string name="mustakil">Müstakil</string>
    <string name="rezidans">Rezidans</string>
    <string name="villa">Villa</string>
    <string name="ciftlik_evi">Çiftlik Evi</string>
    <string name="yali">Yalı</string>
    <string name="kosk_konak">Köşk/Konak</string>
    <string name="yazlik">Yazlık</string>
    <string name="title_activity_ad_page">AdPage</string>
    <string name="title_activity_homepage_business_category">HomepageBusinessCategory</string>
    <string name="str_house">Konut</string>
    <string name="str_plot">Arsa</string>
    <string name="str_workplace">İş Yeri</string>
    <string name="str_building">Bina</string>
</resources>
