<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_house"
            android:icon="@drawable/home"
            android:title="@string/str_house" />
        <item
            android:id="@+id/nav_plot"
            android:icon="@drawable/plat"
            android:title="@string/str_plot" />
        <item
            android:id="@+id/nav_workplace"
            android:icon="@drawable/workspace"
            android:title="@string/str_workplace" />
        <item
            android:id="@+id/nav_building"
            android:icon="@drawable/building"
            android:title="@string/str_building" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
