<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smtgroup.estateapplication.Kategori">

    <TextView
        android:id="@+id/txtBaslik"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/ilan_kategorisi"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnKonut"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/txtBaslik"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/konut" />

    <Button
        android:id="@+id/btnIsyeri"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnKonut"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/isyeri" />

    <Button
        android:id="@+id/btnBina"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnIsyeri"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/bina" />

    <Button
        android:id="@+id/btnArsa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnBina"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/arsa" />
</RelativeLayout>
