<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smtgroup.estateapplication.Tip">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/ilan_tipi"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnsatilik"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/satilik" />

    <Button
        android:id="@+id/btnkiralık"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnsatilik"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/kiralik" />
</RelativeLayout>
